# py_examples

./: .gitignore  README.md  SQLite数据库.py  UI_gradio.py  ex.ipynb  ex_logging.py  ex_multiprocessing.py  ex_openpyxl.py  ex_pandas.py  ex_plt.ipynb  ex_pyside_simple_win.py  ex_sqlite.py  ex_threading.py  filerw.py  locale.py  pi_ds.py  pyproject.toml  pyside_signal.py  pyside_win_style.py  queue_multiprocessing.py  queue_threading.py  timer.py  ui_gradio.ipynb  国际化.py  定时器.py  平台转推.py  并发并行.py  异步任务.py  拉流播放.py  日志.py  生产消费队列(线程与进程).py  装饰器.py
data/: tutorial.db
ex_data/: tutorial.db
ex_flask/: .coverage  README.md  requirements.txt
ex_flask/flaskr/: __init__.py  auth.py  db.py
ex_flask/tests/: conftest.py
ex_locale/zh_CN/LC_MESSAGES/: gjh.mo
ex_packaging/: README.md
ex_packaging/src/example_package/: __main__.py
flask/: pyproject.toml
flask/instance/: flaskr.sqlite
locale/: gjh.po
packaging/: pyproject.toml
seaborn/: 0基础_折线图_lineplots.ipynb  0基础_散点图_scatterplot.ipynb  0基础_柱状图_barplot.ipynb  1统计_小提琴图_violinplot.ipynb  1统计_点图_pointplot.ipynb  1统计_箱线图_boxplot+boxenplot.ipynb  2_分布_分布图_displot.ipynb  2_分布_分面网格分布_FacetGrid.ipynb  2_分布_核密度估计_kdeplot.ipynb  2_分布_热力图_heatmap+clustermap.ipynb  2_分布_直方图_histplot.ipynb  2_分布_联合分布图_JointGrid.ipynb  2_分布_联合分布图_jointplot.ipynb  3_关系_关系图_relplot.ipynb  3_关系_回归拟合_anscombes_quartet.py  3_关系_回归拟合_lmplot+regplot.ipynb  3_关系_多变量关系矩阵_pairplot.ipynb  4_分类_分类图_catplot.ipynb  4_分类_分类散点图_stripplot+swarmplot.ipynb  8_综合.ipynb  9_支持_分面网格_FacetGrid.ipynb
