[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package"
version = "0.0.1"
requires-python = ">=3.8"
authors = [
  {name = "admin"},
  {email = "admin@example.com"},
  {name = "Pradyun Gedam", email = "pradyun@example.com"},
  {name = "Tzu-Ping Chung", email = "tzu-ping@example.com"},
]
maintainers = [
  {name = "Brett Cannon", email = "brett@example.com"},
]
description = "A small example package"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",  
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"